--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,17 @@
         "php": "^8.0.2",
         "bensampo/laravel-enum": "^5.2",
         "coderello/laravel-nova-lang": "^1.8",
+        "digital-creative/collapsible-resource-manager": "^1.4",
+        "ek0519/quilljs": "^0.5.0",
+        "genealabs/nova-map-marker-field": "^0.4.1",
         "guzzlehttp/guzzle": "^7.2",
+        "inspheric/nova-indicator-field": "^1.43",
         "laravel/framework": "^9.2",
         "laravel/nova": "~3.0",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "simplesquid/nova-enum-field": "^2.6",
+        "timothyasp/nova-color-field": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -57,7 +63,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/thanks": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
